# emerald-hwkey

./: .gitignore  Cargo.toml  README.adoc  build.rs  crates.md  hw_reference.adoc
.github/workflows/: publish.yaml  test.yaml
reference/: bitcoin.adoc  ledger-bitcoin.adoc  ledger-ethereum-diagram.adoc  ledger-ethereum-tlv.adoc  ledger-ethereum.adoc  ledger.adoc
src/: errors.rs  ledger.rs  lib.rs
src/ledger/: apdu.rs  app_bitcoin.rs  app_ethereum.rs  comm.rs  commons.rs  manager.rs  manager_mt.rs  mod.rs  speculos.rs  traits.rs
src/ledger/app/: bitcoin.rs  ethereum.rs  mod.rs
src/ledger/connect/: direct.rs  mock.rs  mod.rs  shared.rs  speculos.rs  speculos_api.rs
testdata/ledger/: tx.json
testdata/ledger-elf/: README.adoc  ethereum-nanos-2.1.0-1.9.18.elf  ethereum-nanox-1.2-1.8.8.elf  ethereum-nanox-2.0.2-1.9.18.elf
tests/: ledger.rs  ledger_bitcoin.rs  ledger_ethereum.rs  ledger_noapp.rs  speculos_bitcoin.rs  speculos_ethereum.rs
tests/common/: mod.rs  speculos_container.rs
