[package]
name = "emerald-hwkey"
description = "Emerald HWKey - Harware Cryptocurrency Key Access"
version = "0.3.0"
authors = ["Igor Artamonov <igor@artamonov.email>", "Dmitry Ulanov <dulanov@gmail.com>", "Constantine Kryvomaz <kostiyantynk@gmail.com>"]
edition = "2018"
readme = "crates.md"
repository = "https://github.com/emeraldpay/emerald-hwkey"
documentation = "https://docs.rs/emerald-hwkey"
license = "Apache-2.0"

[lib]
name = "emerald_hwkey"
path = "src/lib.rs"

[features]
default = []
# Uses Ledger Speculos app emulator instead of real hardware
speculos=["dep:ureq", "dep:serde", "dep:serde_json", "dep:serde_derive"]

[dependencies]
hidapi = "1.4.1"
hdpath = "~0.6"
hex = "0.4.2"
log = "0.4.11"
bitcoin = "~0.28"
byteorder = "1.3.4"
sha2 = "0.9.1"
ripemd160 = "0.9.1"
lazy_static = "1.4.0"
ureq = { version = "2.4", features = ["json"], default-features = false, optional = true }
serde = { version = "1.0", optional = true}
serde_json = { version = "1.0", optional = true}
serde_derive = { version = "1.0", optional = true}

[dev-dependencies]
tempdir = "0.3.7"
quickcheck = "0.9.2"
bencher = "0.1.5"
simple_logger = "1.11.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
secp256k1 = { version = "~0.22", features = ["rand", "recovery"] }