[package]
name = "emerald-hwkey"
description = "Emerald HWKey - Harware Cryptocurrency Key Access"
version = "0.6.0-dev"
authors = ["Igor Artamonov <igor@artamonov.email>", "Dmitry Ulanov <dulanov@gmail.com>", "Constantine Kryvomaz <kostiyantynk@gmail.com>"]
edition = "2021"
readme = "crates.md"
repository = "https://github.com/emeraldpay/emerald-hwkey"
documentation = "https://docs.rs/emerald-hwkey"
license = "Apache-2.0"

[lib]
name = "emerald_hwkey"
path = "src/lib.rs"

[features]
default = []
# Uses Ledger Speculos app emulator instead of real hardware
speculos=["dep:ureq", "dep:serde", "dep:serde_json", "dep:serde_derive"]

[dependencies]
hidapi = "2.6"
hdpath = "0.6.2"
#hdpath = { path = "../hdpath", features = ["with-bitcoin"] }
hex = "0.4.2"
log = "0.4.11"
bitcoin = "0.29"
byteorder = "1.5"
sha2 = "0.10"
ripemd = "0.1"
lazy_static = "1.5"
ureq = { version = "2.12", features = ["json"], default-features = false, optional = true }
serde = { version = "1.0", optional = true}
serde_json = { version = "1.0", optional = true}
serde_derive = { version = "1.0", optional = true}

[dev-dependencies]
tempdir = "0.3"
quickcheck = "1.0"
bencher = "0.1"
simple_logger = "4.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.9"
secp256k1 = { version = "~0.24", features = ["rand", "recovery"] }